<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <artifactId>redance</artifactId>
    <groupId>za.net.hanro50</groupId>
    <version>1.7.1</version>
  </parent>

  <groupId>za.net.hanro50</groupId>
  <artifactId>wrapart</artifactId>
  <version>1.7.1</version>

  <name>wrapart</name>
  <!-- FIXME change it to the project's website -->
  <url>http://www.example.com</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.7.1</maven.compiler.source>
    <maven.compiler.target>1.7.1</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>za.net.hanro50</groupId>
      <artifactId>agenta</artifactId>
      <version>1.7.1</version>
    </dependency>
    <dependency>
      <groupId>org.mybatis</groupId>
      <artifactId>mybatis</artifactId>
      <version>3.5.11</version>
    </dependency>
  </dependencies>

  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.9</source>
          <target>1.9</target>
          <compilerArgs>
            <arg>--add-exports</arg>
            <arg>java.base/sun.net.www.protocol.http=ALL-UNNAMED</arg>
          </compilerArgs>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <archive>
            <manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
          </archive>
        </configuration>
      </plugin>
      <!-- Set a compiler level -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.3.2</version>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
        </configuration>
      </plugin>
      <!-- Maven Shade Plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>2.3</version>
        <executions>
          <!-- Run shade goal on package phase -->
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <filters>
                <filter>
                  <artifact>*:*</artifact>
                  <excludes>
                    <exclude>META-INF/versions/**</exclude>
                    <exclude>mod_Agenta.class</exclude>
                  <!--  <exclude>za/net/hanro50/mod/**</exclude>
                    <exclude>agenta/**</exclude>
                    <exclude>plugin.yml</exclude>
                    <exclude>META-INF/mods.toml</exclude>
                    <exclude>fabric.mod.json</exclude>
                    <exclude>mod_Agenta.info</exclude>
                   
                    <exclude>parameters.txt</exclude>
                    <exclude>mcmod.info</exclude>-->
                  </excludes>
                </filter>
              </filters>
              <relocations>
                <relocation>
                  <!--This
									could conflict with forge...so I am just changing it out for
									Google's South African Domain-->
                  <pattern>com.google</pattern>
                  <shadedPattern>za.co.google</shadedPattern>
                  <includes>
                    <include>com.google.**</include>
                  </includes>
                </relocation>
              </relocations>
              <artifactSet>
                <excludes>
                  <exclude>za.net.hanro50.modloader:*</exclude>
                  <exclude>net.minecraftforge:*</exclude>
                  <exclude>org.apache.logging.log4j:*</exclude>
                </excludes>
              </artifactSet>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>